Shareable-Resume-Builder

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                     <label for="end-date">End Date:</label>
                     <input type="date" id="end-date" required>
                 </section>
+                
+            <label for="imageUplaod" class="file-upload-label"> Select Your Image
+                <input type="file" name="imageUplaod" id="imageUplaod" accept="image/*" hidden>
+            </label>
             </div>
     
             <button onclick="generateResume()">Generate Resume</button>
